--- a/src/app/rating/rating.page.html
+++ b/src/app/rating/rating.page.html
@@ -19,10 +19,20 @@
   <!-- card imagen de libro -->
  
 
+
+  <ion-button expand="block" (click)="scannerQr()">Escanear QR</ion-button>
+{{code}}
+
+
+
   <ion-card>
     <ion-card-header>
       <ion-card-title >Agregar Reseña</ion-card-title>
     </ion-card-header>
+    <ion-item>
+      <ion-label position="floating">Codigo</ion-label>
+      <ion-input [(ngModel)]="libro.codigo"></ion-input>
+    </ion-item>
     <ion-item>
       <ion-label position="floating" >Titulo</ion-label>
       <ion-input [(ngModel)]="libro.titulo" ></ion-input>
@@ -76,6 +86,8 @@
             <ion-card-title>{{libro.titulo}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
+            Codigo:{{libro.codigo}}
+            <br>
             Autor:{{libro.autor}}
             <br>
             Cita Favorita:{{libro.cita}}
